=========
 Changes
=========

Here you can see the list of changes between each Holocron release.


0.2.0 (inprogress)
==================

- reStructuredText converter is added.


0.1.1 (2015-08-22)
==================

- ``tests`` package is no longer installed.
- ``holocron.theme`` data is now installed by setuptools.


0.1.0 (2015-08-22)
==================

- First public release.