@@ -55,7 +55,7 @@ class Markdown(abc.Converter):
     def __init__(self, app):
         self._conf = Conf(self._default_conf, app.conf.get('ext.markdown', {}))
         self._markdown = markdown.Markdown(extensions=self._conf['extensions'])
-        self._re_title = re.compile('<h1>(.*)</h1>(.*)', re.M | re.S)
+        self._re_title = re.compile('<h1>(.*?)</h1>(.*)', re.M | re.S)
 
         app.add_converter(self)
 
